<resources>

    <string name="app_name">Time Tracker</string>
    <string name="backlog_item_activity_label">Backlog Items</string>
    <string name="day_plan_activity_label">Tasks of Today</string>
    <string name="dashboard_activity_label">Review</string>
    <string name="ok">OK</string>
    <string name="action_mark">Add</string>
    <string name="action_pickup">Choose tasks</string>
    <string name="action_close">Done today</string>
    <string name="tab_label_daily">Daily</string>
    <string name="tab_label_weekly">Weekly</string>
    <string name="tab_label_burndown">Burndown</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="backlog_completed">Completed</string>
    <string name="hint_title">Title</string>
    <string name="hint_desc">Description</string>
    <string name="hint_add_backlog_title">Add backlog</string>
    <string name="built_in_task_commute">Commute</string>
    <string name="built_in_task_personal">Personal</string>
    <string name="built_in_task_work">Work</string>
    <string name="built_in_task_family">Family</string>
    <string name="built_in_task_rest">Rest</string>
    <string name="built_in_task_social">Social</string>
    <string name="built_in_task_idleness">Idleness</string>
    <string name="show_all_switch">Show Completed Items</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="backlog_estimate">Estimate:</string>
    <string name="estimate_average">Avg/Day:</string>
    <string name="backlog_estimate_unit">Hours</string>
    <string name="backlog_due_date">Due Date:</string>
    <string name="due_date_left">Left:</string>
    <string name="action_daily">Daily</string>
    <string name="action_weekly">Weekly</string>

    <string-array name="Pages">
        <item>Tasks</item>
        <item>Backlog Items</item>
        <item>Reports</item>
    </string-array>

    <string name="empty_view_text">Click to choose tasks for today.</string>
    <string name="refresh">Refresh</string>
    <string name="report">Report</string>

</resources>